Bug 170554 - Can't save Writer tables beyond a certain size: Error in writing sub-document SfxBaseModel::impl_store failed
Summary: Can't save Writer tables beyond a certain size: Error in writing sub-document...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: x86-64 (AMD64) All
: high major
Assignee: Vladislav Tarakanov
URL:
Whiteboard: target:26.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2026-01-31 15:56 UTC by Buovjaga
Modified: 2026-02-20 16:16 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2026-01-31 15:56:37 UTC
1. Open Writer
2. Table - Insert table
3. Columns: 40, Rows: 600
4. Try to save as ODT

Error in writing sub-document SfxBaseModel::impl_store <path/to/document> failed: 0x70c23(Error Area:Sw Class:Writer Code:35) arg1=styles.xml.

Bibisected with linux-64-26.8 to 2f16debb36b6f92e9be8749bbfc466cd779aa162
sw: Simplifying the "Insert Table" dialog
Comment 1 Sergey Katunin 2026-01-31 21:47:12 UTC
Hi, Vladislav Tarakanov <vladislav.tarakanov@bk.ru> asked me to send a message from him.

Original message from Vladislav Tarakanov:

"Fix for this: https://gerrit.libreoffice.org/c/core/+/198468

I apologize, I missed that the old algorithm didn't call SetTableStyle for the "None" style. The fix now handles this case similarly to the old behavior. Just in case, I've left a comment that 0 is now reserved for the non-existent "None" style."
Comment 2 Commit Notification 2026-02-01 08:24:54 UTC
Vladislav Tarakanov committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e46314fa134c19a5e43f51e55e1fb06c86ac508f

tdf#170554 Do not call SetTableStyle for None style

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-02-02 13:27:15 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d982e56ab3a99a6033a191d5829cb03289c63720

tdf#170554: sw: Add UItest

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Buovjaga 2026-02-02 13:33:15 UTC
Vladislav: feel free to close as fixed.
Comment 5 Commit Notification 2026-02-20 16:16:04 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c9e9ea9d03c6cd315b2071bbfa2a3812799ea815

related tdf#170554: No need to use a large table in the UItest

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.