tdf#170554 Do not call SetTableStyle for None style

SwFEShell::SetTableStyle should not be called if
"None" was selected, which is not a real table style.

Change-Id: I8a5cd4fd0ee111e4fcf657edf32918e66af69056
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198468
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Tested-by: Jenkins